<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TableRow android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/sendTo_txt"
                    android:textColor="@color/red_uae101"
                    android:textSize="16sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/contactName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black70a"
                    android:textSize="16sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prefix_hint"
                    android:textColor="@color/black70a"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone"

                    />


                <EditText
                    android:id="@+id/phoneNumberToSendInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/sendCreditNumber_msg"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:minWidth="200dp"
                    android:textColorHint="@color/LightGrey"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/chooseContactBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/bg_lineleft"
                android:src="@drawable/ic_choosecontact"
                android:textStyle="bold"


                />


        </TableRow>

        <TableRow android:layout_marginBottom="10dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enterAmount_msg"
                android:textColor="@color/red_uae101"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>


        <TableRow android:gravity="center_vertical">


            <EditText
                android:id="@+id/amountToSendInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/amountToSendHint_msg"
                android:inputType="number"
                android:maxLength="3"
                android:textColorHint="@color/LightGrey" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="40dp"
        android:text="@string/send_txt"
        android:visibility="gone" />

</RelativeLayout>