<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".AcvParking">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp">


            <RadioGroup
                android:id="@+id/emiratesParking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="40dp"
                android:checkedButton="@+id/dubaiParking"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/dubaiParking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_left"
                    android:button="@null"
                    android:gravity="center"
                    android:minWidth="100dp"
                    android:padding="12dp"
                    android:text="Dubai"
                    android:textColor="@drawable/segmented_textcolor"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/sharjahParking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_right"
                    android:button="@null"
                    android:gravity="center"
                    android:minWidth="100dp"
                    android:padding="12dp"
                    android:text="Sharjah"
                    android:textColor="@drawable/segmented_textcolor"
                    android:textSize="17sp" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="Plate Number"
                android:textColor="@color/red_uae101"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="17dp"

                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/plateCodeDropDown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="3"
                    android:hint="@string/platecode_txt" />

                <EditText
                    android:id="@+id/plateNumberInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"

                    android:hint="@string/plateNumber_txt"
                    android:inputType="number"
                    android:maxLength="5"
                    android:textColorHint="@color/LightGrey" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="Zone"
                android:textColor="@color/red_uae101"

                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/zoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:hint="@string/zone_txt"
                android:inputType="textFilter|textCapCharacters"

                android:maxLength="4"
                android:textColorHint="@color/LightGrey"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="Duration"
                android:textColor="@color/red_uae101"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/durationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/duration_txt"
                android:inputType="number"
                android:maxLength="2"
                android:textColorHint="@color/LightGrey" />


        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="40dp"
        android:layout_marginLeft="167dp"
        android:text="PAY"
        android:visibility="gone" />

</RelativeLayout>